--- a/src/styling/Details.css
+++ b/src/styling/Details.css
@@ -20,3 +20,24 @@ body {
   font-size: 1.15rem;
   color: #fff;
 }
+
+.symbol {
+  width: 10%;
+  margin: 0.75rem auto;
+  color: #e6216c;
+  padding: 0.25rem;
+  background-color: #ffc0d8;
+  border-radius: 0.25rem;
+  text-align: center;
+}
+
+@media (min-width: 640px) {
+  .detail-list {
+    width: 50%;
+    margin: 1rem auto;
+  }
+
+  .detail-card {
+    text-align: center;
+  }
+}
