--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -8,7 +8,7 @@ body {
 nav {
   width: 90%;
   padding: 1.5rem 5%;
-  border-bottom: 2px solid #97536d;
+  border-bottom: 2px solid #ce3872;
   box-shadow: 2px 2px 2px 2px #e6216c;
 }
 
@@ -112,6 +112,7 @@ div {
 }
 
 .home-card {
+  box-sizing: border-box;
   width: 90%;
   padding: 0.5rem;
   height: 6rem;
@@ -128,4 +129,30 @@ div {
   align-items: center;
   text-decoration: none;
   color: #fff;
+}
+
+@media (min-width: 640px) {
+  img {
+    width: 90%;
+  }
+
+  .image {
+    width: 50%;
+    margin: 1rem auto;
+  }
+
+  .search-input {
+    width: 93%;
+  }
+
+  .cardlist {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 1rem auto;
+  }
+
+  .home-card {
+    height: 8rem;
+  }
 }
